[gd_scene load_steps=16 format=3 uid="uid://b05iday2f76m8"]

[ext_resource type="Texture2D" uid="uid://3ifey7vydc1g" path="res://asset/RainShadow.png" id="1_yuhay"]
[ext_resource type="Texture2D" uid="uid://d1d4dafdt2h4y" path="res://asset/Raindrop.png" id="2_6vlow"]
[ext_resource type="Script" path="res://tscn/bosses/slug/raindrop.gd" id="3_ykqew"]
[ext_resource type="PackedScene" uid="uid://chroaa84f3t1r" path="res://tscn/components/kill_area.tscn" id="4_vf7t2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q3p3o"]
atlas = ExtResource("2_6vlow")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlg1s"]
atlas = ExtResource("2_6vlow")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jshk"]
atlas = ExtResource("2_6vlow")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u7qu"]
atlas = ExtResource("2_6vlow")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n35q3"]
atlas = ExtResource("2_6vlow")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yunlh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_yuhay")
}],
"loop": true,
"name": &"bayangan",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3p3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlg1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jshk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u7qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n35q3")
}],
"loop": true,
"name": &"jatuh",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_3erk2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("kill_area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"bayangan"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4eyy5"]
resource_name = "jatuh"
length = 0.26667
step = 0.03125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("kill_area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jatuh"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xmew6"]
resource_name = "drop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(8, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("kill_area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"bayangan"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.886275)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dl0p"]
_data = {
"RESET": SubResource("Animation_3erk2"),
"impact": SubResource("Animation_4eyy5"),
"shadow": SubResource("Animation_xmew6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5ka7t"]
radius = 15.8114

[node name="b1_lavashot" type="AnimatedSprite2D" node_paths=PackedStringArray("animPlayer", "killArea")]
modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_yunlh")
animation = &"bayangan"
script = ExtResource("3_ykqew")
animPlayer = NodePath("AnimationPlayer")
killArea = NodePath("kill_area")
damage = 30
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4dl0p")
}

[node name="kill_area" parent="." instance=ExtResource("4_vf7t2")]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_area"]
shape = SubResource("CircleShape2D_5ka7t")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
